# keystation

./: .gitignore  README.md  TODO.md  build-toolchains.sh  ksb  ksb-toolchains.sh  vendor.json
bitbake/: layers  vendor_layers
bitbake/conf/: bblayers.conf  local.conf
bitbake/meta-keystation/classes/: base.bbclass
bitbake/meta-keystation/conf/: bitbake.conf
bitbake/meta-keystation/conf/distro/: keystation.conf
bitbake/meta-keystation/recipes-core/images/: keystation-image.bb
buildroot/: Config.in  external.desc  external.mk
buildroot/board/raspberrypi4-64/: cmdline.txt  config_4_64bit.txt  genimage-raspberrypi4-64.cfg  kernel_defconfig  post-build.sh
buildroot/configs/: keystation_defconfig
buildroot/package/builtin-patches/: Config.in  builtin-patches.mk
buildroot/package/cardinal/: Config.in  S99cardinal  cardinal.mk
buildroot/package/jack-tools/: 01-meson.patch  Config.in  jack-tools.mk
buildroot/package/jackd/: Config.in  S10jackd  jackd.mk
buildroot/package/key-controller/: Config.in  S10key-controller  key-controller.mk  source
buildroot/package/key-driver/: Config.in  S50key-driver  key-driver.mk  source
buildroot/package/key-firmware/: Config.in  key-firmware.mk
buildroot/package/keyboard-daemon/: Config.in  S50keyboard-daemon  keyboard-daemon.mk
buildroot/package/keystation/: 01core  Config.in  S05keystation  asound.conf  keystation.mk  source
buildroot/package/loadmodules/: Config.in  S01modules  S05modules  loadmodules.mk
buildroot/package/midi-gadget/: Config.in  midi-gadget.mk
buildroot/package/midi-tools/: Config.in  midi-tools.mk  source
buildroot/package/patch-loader/: Config.in  patch-loader.mk  source
buildroot/package/rs-tty/: Config.in  rs-tty.mk
buildroot/package/serial-gadget/: Config.in  serial-gadget.mk
buildroot/package/update-daemon/: Config.in  S05update-daemon  update-daemon.mk
buildroot/package/usb-gadget/: 02usb  Config.in  S02usb-gadget  usb-gadget.mk
buildroot/package/vcvrack2/: 0001-cross-compile.patch  Config.in  vcvrack2.mk
key-controller/: Cargo.toml
key-driver/: Cargo.toml
key-driver/src/: main.rs  midi.rs  serial.rs
key-driver/src/serial/: mod.rs  serial.rs
key-firmware/: Cargo.toml
key-firmware/src/: main.rs  millis.rs  shift.rs
keystation/: Cargo.toml  README.md
keystation-firmware/: Cargo.toml  build.rs
keystation-firmware/.cargo/: config.toml
keystation-firmware/.cargo/targets/: avr-atmega2560.json  avr-atmega328p.json  avr-atmega32u4.json  avr-attiny88.json
keystation-firmware/avr-specs/: avr-atmega1280.json  avr-atmega168.json  avr-atmega48p.json  avr-attiny85.json
keystation-firmware/src/: keybed.rs  main.rs  millis.rs  shift.rs
keystation/src/: main.rs
ksb-scripts/: ksb-bitbake  ksb-buildroot  ksb-buildroot-boot  ksb-buildroot-build  ksb-buildroot-configure  ksb-buildroot-flash  ksb-buildroot-rebuild  ksb-buildroot-save  ksb-cargo  ksb-clean  ksb-firmware  ksb-help  ksb-toolchain  ksb-vendor
ksb-scripts/lib/: frontmatter.sh  json.sh  logging.sh
midi-tools/: Cargo.toml  README.md
midi-tools/src/: main.rs
patch-loader/: README.md
patch-loader/patches/: sine_patch.vcv
rs-tty/: Cargo.toml
rs-tty/src/: lib.rs
system-components/: Cargo.toml
system-components/key-controller/src/: main.rs
system-components/key-driver/: Cargo.toml
system-components/key-driver/src/: main.rs
system-components/keyboard-daemon/: Cargo.toml  README.md
system-components/keyboard-daemon/src/: boot_animation.rs  gpio_driver.rs  keybed_driver.rs  main.rs  midi_sender.rs  user_interface.rs
system-components/keyboard-daemon/src/display/: display_keyboard.rs  display_simulator.rs  mod.rs
system-components/keyboard-daemon/src/user_interface/: display.rs  display_fake.rs  display_keyboard.rs  display_real.rs  display_simulator.rs  mod.rs  user_interface.rs
system-components/keystation/: Cargo.toml
system-components/keystation/src/: main.rs
system-components/patch-loader/: Cargo.toml
system-components/patch-loader/patches/: UnisonAM.vcv  key_test.vcv
system-components/patch-loader/src/: main.rs
system-components/rs-tty/: Cargo.toml
system-components/rs-tty/src/: lib.rs
system-components/tricorder/: Cargo.toml  README.md
system-components/tricorder/src/: main.rs
system-components/update-daemon/: Cargo.toml
system-components/update-daemon/src/: main.rs
system-components/updater/: Cargo.toml  README.md
system-components/updater/src/: main.rs
tools/: Cargo.toml
tools/midi-spy/: Cargo.toml
tools/midi-spy/src/: main.rs
