[package]
name = "keyboard-daemon"
version = "0.1.0"
edition = "2021"


# RPI triple: aarch64-unknown-linux-gnu

[dependencies]

anyhow = "1.0.95"
crossbeam = "0.8.4"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"

midir = { version = "0.10.0", default-features = false }
midly = "0.5.3"

#simulator deps
embedded-graphics-simulator = { version = "0.7.0", optional = true }

# keyboard deps
rs-tty = { path = "../rs-tty", optional = true }
rppal = { version = "0.22.1", features = ["hal"], optional = true }
ssd1306 = { version = "0.8.4", optional = true } # can't upgrade until buildroot's rust is updagraded TODO: Try upgrading buildroot

[features]
default = ["keyboard"]
keyboard = [
    "midir/jack",
    "rppal",
    "ssd1306",
    "rs-tty"
]
simulator = [
    "embedded-graphics-simulator"
]